# llm-wrapper

./: LICENSE  README.md  pyproject.toml
examples/: unwrapped_anthropic.py  unwrapped_google.py  unwrapped_openai.py  wrapped_anthropic.py  wrapped_google.py  wrapped_openai.py
src/llm_wrapper/: __init__.py  anthropic.py  base.py  google.py  openai.py
