[project]
name = "llm-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "connacher.murphy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
