[project]
name = "llm-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "connacher.murphy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "openai>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
